<?xml version="1.0" encoding="utf-8"?>

<!--
@Author: Minh Duong
@Description: This XML file contains order and styles of the contents of the User Interface
              of the app (Main Activity). This will be the initial states of the views.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="270dp"
        android:layout_height="84dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/verdana"
        android:text="@string/title"
        android:textSize="68sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="125dp"
        android:layout_height="88dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"
        android:background="@color/semi_trans_red"
        android:breakStrategy="simple"
        android:gravity="center"
        android:onClick="onToggleDelay"
        android:text="@string/toggle"
        android:fontFamily="@font/tempus"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="192dp"
        android:layout_height="270dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/semi_trans_black"
        android:text="@string/arrow"
        android:fontFamily="@font/gabriola"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:onClick="onClickButton1"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="192dp"
        android:layout_height="270dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/semi_trans_black"
        android:text="@string/hammer"
        android:fontFamily="@font/gabriola"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:onClick="onClickButton2"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="192dp"
        android:layout_height="270dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/semi_trans_black"
        android:text="@string/nope"
        android:fontFamily="@font/gabriola"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:onClick="onClickButton3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="192dp"
        android:layout_height="270dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/semi_trans_black"
        android:text="@string/sweetroll"
        android:fontFamily="@font/gabriola"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:onClick="onClickButton4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3" />

</androidx.constraintlayout.widget.ConstraintLayout>